[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name =  "cfm"
description = "A consistency-flow-matching implementation in Flax"
authors = [{name = "Simon Dirmeier", email = "sfyrbnd@pm.me"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.11"
dependencies = [
    "jax>=0.4.31",
    "flax>=0.9.0",
    "optax>=0.2.3",
    "ml-collections>=0.1.1",
    "clu>=0.0.12",
    "tensorflow>=2.17.0",
    "tensorflow-datasets>=4.9.6",
    "tensorflow-probability>=0.24.0",
]
dynamic = ["version"]

[tool.setuptools]
packages = ["cfm"]

[tool.setuptools.dynamic]
version = {attr = "cfm.__init__.__version__"}

[tool.rye]
managed = true
dev-dependencies = [
    "pre-commit>=3.8.0",
    "psutil>=6.0.0",
    "wandb>=0.18.3",
    "matplotlib>=3.9.2",
]

[tool.bandit]
skips = ["B101"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
extend-select = [
  "UP", "I", "S"
]
ignore = ["S301",  "S101", "S603", "S607"]
